# matrix-matrix-cpu-gpu

./: .gitignore  CMakeLists.txt
cmake/modules/: FindEigen.cmake
data/: generate-graphs.R
specific/: Makefile  dados  simpleCUBLAS.cpp
specific/cuda/: Makefile  matrixMul.cu  matrixMul.h  matrixmul
src/: .directory  CMakeLists.txt  algorithm.cpp  algorithm.hpp  armadillodense.cpp  armadillodense.hpp  armadillosparse.cpp  armadillosparse.hpp  benchmark.cpp  benchmark.hpp  blas.cpp  blas.hpp  boost.cpp  boost.hpp  cublas.cu  cublas.hpp  cusparse.cu  cusparse.hpp  cust-cpu.cu  cust-cpu.hpp  cust-gpu.cu  cust-gpu.hpp  cutil.hpp  debug.hpp  eigend.cpp  eigend.hpp  eigens.cpp  eigens.hpp  main.cpp  method.hpp  random.cpp  random.hpp  range.h  reader.cpp  reader.hpp  simple.cpp  simple.hpp  strassen.cpp  strassen.hpp  util.cpp  (+1 more)
